syntax = "proto3";

package dataplaneregistrar;

import "ptypes/empty/empty.proto";

// DataplaneRegistrationRequest is sent by the dataplane to NSM
// to advertise itself and inform NSM about the location of the dataplane socket
// and its initially supported parameters.
message DataplaneRegistrationRequest {
  string dataplane_name = 1;
  string dataplane_socket = 2;
}

message DataplaneRegistrationReply {
  bool registered = 1;
}

service DataplaneRegistration {
    rpc RequestDataplaneRegistration (DataplaneRegistrationRequest) returns (DataplaneRegistrationReply);
    // RequestLiveness is a stream initiated by NSM to inform the dataplane that NSM is still alive and
    // no re-registration is required. Detection a failure on this "channel" will mean
    // that NSM is gone and the dataplane needs to start re-registration logic.
    rpc RequestLiveness (stream google.protobuf.Empty) returns (stream google.protobuf.Empty);
}

// DataplaneUnRegistrationRequest is sent by the dataplane to NSM
// to remove itself from the list of available dataplanes.
message DataplaneUnRegistrationRequest {
    string dataplane_name = 1;
  }
  
  message DataplaneUnRegistrationReply {
    bool un_registered = 1;
  }
  
  service DataplaneUnRegistration {
      rpc RequestDataplaneUnRegistration (DataplaneUnRegistrationRequest) returns (DataplaneUnRegistrationReply);
  }
